class FaixaIterator {
  hasNext() { throw new Error('hasNext() não implementado'); }
  next()    { throw new Error('next() não implementado'); }
  reset()   { throw new Error('reset() não implementado'); }
}

module.exports = FaixaIterator;
